--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-438.6KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.57MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇨🇳 中国-9.27MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26004, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 波兰-162.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.54MB/s(Youtube:不良林), server: 103.253.26.134, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.134}}
-  - {name: 🇸🇬 新加坡-2.53MB/s(Youtube:不良林), server: eeh7iewe.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: eeh7iewe.com}}
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: uk.node.qchwnd.moe, port: 44613, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: uk.node.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-355.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26014, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-10.08MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26007, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26001, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26002, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26013, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: ocikr.node.qchwnd.moe, port: 44600, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: ocikr.node.qchwnd.moe, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 波兰-162.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 波兰-162.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 波兰-162.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 波兰-162.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 波兰-162.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 波兰-162.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-438.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 波兰-162.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
