--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.27MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26004, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26014, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-10.08MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26007, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26001, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: umhn5r.zhs.company, port: 60009, type: vmess, uuid: 67caeeac-e80d-3188-8822-8339eebca085, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: umhn5r.zhs.company}}
+  - {name: 🇨🇳 中国-6.57MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇨🇳 中国-381.4KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26012, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26002, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26013, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: ocikr.node.qchwnd.moe, port: 44600, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: ocikr.node.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-709.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20009, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
