--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26007, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-260.3KB/s(Youtube:不良林), server: umhn5r.zhs.company, port: 60009, type: vmess, uuid: 67caeeac-e80d-3188-8822-8339eebca085, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: umhn5r.zhs.company}}
-  - {name: 🇨🇳 中国-6.57MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 🇨🇳 中国-381.4KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26012, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26002, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26013, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: ocikr.node.qchwnd.moe, port: 44600, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: ocikr.node.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-709.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20009, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-437.2KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20009, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 51.161.118.38, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-11.26MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇯🇵 日本-2.78MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-885.0KB/s(Youtube:不良林), server: 206.189.130.75, port: 17745, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-709.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
