--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-437.2KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20009, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 51.161.118.38, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-11.26MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 🇯🇵 日本-2.78MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-885.0KB/s(Youtube:不良林), server: 206.189.130.75, port: 17745, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇭🇰 香港-238.5KB/s(Youtube:不良林), server: hkbn.henyo.us, port: 44614, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: hkbn.henyo.us, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-662.5KB/s(Youtube:不良林), server: tw.node.qchwnd.moe, port: 44608, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: tw.node.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: shcu.01.211129.xyz, port: 22788, type: trojan, password: 270183d3-8fa4-3ec6-8946-3ac350e6838c, sni: shcu.01.211129.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.61MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.63MB/s(Youtube:不良林), server: szcm.9218561.xyz, port: 24615, type: trojan, password: 270183d3-8fa4-3ec6-8946-3ac350e6838c, sni: szcm.9218561.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.39MB/s(Youtube:不良林), server: hk11-vm5.entry.ikuuu.casa, port: 459, type: vmess, uuid: b3bc07e6-452a-36fd-8476-bd7aac00f265, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: hk11-vm5.entry.ikuuu.casa}}
+  - {name: 🇨🇳 中国-5.98MB/s(Youtube:不良林), server: hk01-vm5.entry.ikuuu.casa, port: 450, type: vmess, uuid: b3bc07e6-452a-36fd-8476-bd7aac00f265, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: hk01-vm5.entry.ikuuu.casa}}
+  - {name: 🇨🇳 中国-481.2KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-653.7KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-653.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-653.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-653.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-653.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-653.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-653.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-437.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-238.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-662.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-653.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
